--- a/src/components/Characters/CharactersStyle.css
+++ b/src/components/Characters/CharactersStyle.css
@@ -1,12 +1,23 @@
-.characters{
+.characters {
     width: 100%;
 }
 
-.characters-error{
-
+.characters-error {
+    width: 100%;
+    margin: 0 auto;
 }
 
-.characters-block{
+.layout-title {
+    text-align: center;
+    margin-bottom: 3rem;
+}
+
+.layout-form {
+    width: 100%;
+    margin-bottom: 4rem;
+}
+
+.characters-block {
     width: 100%;
     display: flex;
     flex-wrap: wrap;
