--- a/src/index.css
+++ b/src/index.css
@@ -11,6 +11,8 @@
     --var-c-single-information: #8E8E93;
     --var-c-button: #000000;
     --box-shadow-ch: 0px 1px 5px rgba(0, 0, 0, 0.2), 0px 3px 4px rgba(0, 0, 0, 0.12), 0px 2px 4px rgba(0, 0, 0, 0.14);
+    --var-bg-color: #FFFFFF;
+    --var-bg-btn-blockStar-h1: #7E72F2;
 }
 
 a {
