--- a/src/components/Pagination/PaginationStyle.css
+++ b/src/components/Pagination/PaginationStyle.css
@@ -1,8 +1,9 @@
 .pagination {
+    width: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
-    margin: 3rem;
+    margin: 3rem 0;
 }
 
 .pagination-btn {
